# V2BlankBrowser

./: .gitignore  CMakeLists.txt  README.md  V2BlankBrowser-Beta.flatpak  V2BlankBrowser.flatpak  blankbrowser.flatpakref  download.c  download.h  main.c  pl.art.lach.slawek.V2BlankBrowser-debug.json  pl.art.lach.slawek.V2BlankBrowser.appdata.xml  pl.art.lach.slawek.V2BlankBrowser.beta.json  pl.art.lach.slawek.V2BlankBrowser.desktop  pl.art.lach.slawek.V2BlankBrowser.json  pl.art.lach.slawek.V2BlankBrowser.local.json  pl.art.lach.slawek.V2BlankBrowser.xml  pl.art.lach.slawek.apps.BlankBrowser.appdata.xml  pl.art.lach.slawek.apps.BlankBrowser.desktop  pl.art.lach.slawek.apps.V2BlankBrowser.desktop  pl.art.lach.slawek.apps.blankbrowser.json
